--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -3,4 +3,5 @@
   <h2>{{ item.name }}</h2>
   <p>{{ item.description }}</p>
   <p>\${{ item.price }}</p>
+    <button (click)="removeFromCart(item.id)">Remove</button>
 </div>
