--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -5,5 +5,7 @@
     
     <a routerLink="/cart">
     <button (click)="addToCart(product)">Add to Cart</button> </a>
+      <button (click)="deleteProduct(product.id)">Delete</button>
+
   </div>
   
