--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<div class="nav">
+
+<nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +11,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/productlist">Product</a>
+            <a class="nav-link active" routerLink="/productlist">Product</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" routerLink="/cart">Cart</a>
@@ -24,3 +25,9 @@
       </div>
     </div>
   </nav>
+
+</div>
+<br>
+
+
+<img src="https://img.freepik.com/premium-vector/mega-sale-banner-template-design-web-social-media_39705-344.jpg" width="1300" height="400">
