--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -1,37 +1,16 @@
-<!---
-<div class="prod">
-  <div *ngFor="let product of products">
-    <h2>{{ product.image }}</h2> 
-    <h2>{{ product.name }}</h2>
-    <p>{{ product.description }}</p>
-    <p>\${{ product.price }}</p>
-    
-    <a routerLink="/cart">
-    <button (click)="addToCart(product)">Add to Cart</button> </a>
-    <button (click)="deleteProduct(product.id)">Delete</button>
-  </div>
+<div class="grid">
 
-</div>  --->
-
-
-
-<div class="prod">
-  <div class="grid">
-
-<div class="card" *ngFor="let product of products">
-  <div class="card-body">
-    <h5 class="card-title">{{ product.name }}</h5>
-    <p class="card-text">{{ product.description }}.</p>
-    <p>\${{ product.price }}</p>
-
-    <a routerLink="/cart">
-    <button class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button> </a>
-    <button class="btn btn-primary" (click)="deleteProduct(product.id)">Delete</button>
+<div class="product-container">
+    <div class="product-card" *ngFor="let product of products">
+      <img [src]="product.image" alt="{{ product.name }}" />
+      <h2>{{ product.name }}</h2>
+      <p>{{ product.description }}</p>
+      <p>\${{ product.price }}</p>
+      <a routerLink="/cart">
+      <button (click)="addToCart(product.id)">Add to Cart</button></a>
+    </div>
   </div>
 </div>
 
-</div>
 
-</div>
 
-  
