--- a/src/app/component/product-list/product-list.component.css
+++ b/src/app/component/product-list/product-list.component.css
@@ -1,5 +1,20 @@
-.grid {
-    display:grid;
-    grid-template-columns: repeat(3.1fr);
-    gap: 0.5rem;
-}
+.product-container {
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+  
+  .product-card {
+    border: 1px solid #ddd;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+  }
+  
+  .product-card img {
+    width: 100%;
+    height: auto;
+  }
+
+  
