--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,33 +1,5 @@
-<div class="nav">
 
-<nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/productlist">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/cart">Cart</a>
-          </li>
+<img src="https://media.istockphoto.com/id/498301640/vector/big-sale-banner.jpg?s=612x612&w=0&k=20&c=fppPOZ3LZCyvtDUiy6tR52xDWofX52Fdu3a7Ltc_fVY=" width="1000" height="350">
+<hr>
 
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-
-</div>
-<br>
-
-
-<img src="https://img.freepik.com/premium-vector/mega-sale-banner-template-design-web-social-media_39705-344.jpg" width="1300" height="400">
+ 
