--- a/src/app/component/cart/cart.com,ponent.css
+++ b/src/app/component/cart/cart.com,ponent.css
@@ -1,1 +1,19 @@
 
+.cart-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .cart-item {
+    border: 1px solid #ddd;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+  }
+  
+  .cart-item img {
+    width: 100%;
+    height: auto;
+  }
+  
