--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,146 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="/navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" class="btn btn-success" style=  "margin-left:15px" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" class="btn btn-success" style=  "margin-left:15px" href="/product">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"class="btn btn-success"  style=  "margin-left:15px" href="/offers">Offers</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" class="btn btn-success"  style=  "margin-left:15px"  href="/cart">Cart</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" class="btn btn-success"  style=  "margin-left:15px"  data-bs-toggle="modal" data-bs-target="#exampleModal">Add Item</a>
+            </li>
+
+    
+        </ul>
+  
+        <form class="d-flex">
+          <input class="form-control me-2" style=  "margin-left:15px" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success"  type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <hr>
+
+ <!----- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="product-card" *ngFor="let item of products">
+
+      <div class="carousel-item active" >  
+        <img [src]="item.image" class="d-block  " [alt]="item.name">
+      </div>
+    </div>
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>  -->
+
+  <hr>
+
+ <!--- <app-materials></app-materials>-->
+
+<!-- Button trigger modal 
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>-->
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div style="background-color: yellowgreen" class="cmodal-header">
+        <h1  style="color: white;"  class="modal-title fs-5" id="exampleModalLabel">ADD ITEM  DATA</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="productform">
+          <div class="form group mb-3">
+            <label for="name" class="form-label"> ID</label>
+            <input type="number" class="form-control" formControlName="name" >
+          </div>
+          <div class="modal-body">
+            <label for="name" class="form-label"> Name</label>
+            <input type="text" class="form-control"  formControlName="name">
+          </div>
+          <div class="modal-body">
+            <label for="description" class="form-label"> Description</label>
+            <input type="text" class="form-control"  formControlName="description">
+
+          </div>
+
+          <div class="modal-body">
+            <label for="price" class="form-label"> Price</label>
+            <input type="number" class="form-control"  formControlName="price">
+          </div>
+          <div class="modal-body">
+            <label for="image" class="form-label"> Image</label>
+            <input type="url" class="form-control"  formControlName="image">
+          </div>
+
+          <div class="modal-body">
+            <label for="details" class="form-label"> Details</label>
+            <input type="text" class="form-control"  formControlName="details">
+          </div>
+          <div class="modal-body">
+            <label for="size" class="form-label"> Size</label>
+            <input type="text" class="form-control"  formControlName="size">
+
+          </div>
+          <div class="modal-body">
+            <label for="offers" class="form-label"> Offers</label>
+            <input type="text" class="form-control"  formControlName="offers">
+
+          </div>
+
+          <div class="modal-body">
+            <label for="reviews" class="form-label"> Reviews</label>
+            <input type="password" class="form-control"  formControlName="reviews">
+
+          </div>
+
+
+        </form>
+
+
+
+
+
+
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="addItem(this.productform.value)">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  
 <router-outlet></router-outlet>
